// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styleSvg Should add fill style property to svg element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<svg version=\\"1.1\\" width=\\"11px\\" height=\\"11px\\" viewBox=\\"0 0 11 11\\" id=\\"filled-symbol\\">
  <path/>
  <style>
    #filled-symbol * {
      fill: red;
      #000;
      stroke-width: 1;
      vector-effect: non-scaling-stroke;
    }
  </style>
</svg>"
`;

exports[`styleSvg Should add stroke and stroke-wdth style properties to svg element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<svg version=\\"1.1\\" width=\\"11px\\" height=\\"11px\\" viewBox=\\"0 0 11 11\\" id=\\"filled-stroked-symbol\\">
  <path/>
  <style>
    #filled-stroked-symbol * {
      fill: red;
      stroke: white;
      stroke-width: 1;
      vector-effect: non-scaling-stroke;
    }
  </style>
</svg>"
`;

exports[`styleSvg Should not add style property when style not provided 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<svg version=\\"1.1\\" width=\\"11px\\" height=\\"11px\\" viewBox=\\"0 0 11 11\\" id=\\"unstyled-symbol\\">
  <path/>
  <style>
    #unstyled-symbol * {
      #000;
      #000;
      stroke-width: 1;
      vector-effect: non-scaling-stroke;
    }
  </style>
</svg>"
`;
